--- a/css/main.css
+++ b/css/main.css
@@ -98,6 +98,10 @@ img {
   width: 100%;
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
 .list {
   padding: 0;
   margin: 0;
@@ -193,8 +197,22 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  display: none;
   gap: 50px;
   margin-left: 93px;
+}
+@media screen and (min-width: 480px) {
+  .site-list {
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) {
+  .site-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 50px;
+  }
 }
 
 .site-list .link.current {
@@ -239,11 +257,36 @@ img {
 }
 
 .connect {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 50px;
-  margin-left: auto;
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .connect {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 10px;
+    margin-left: auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .connect {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    gap: 50px;
+    margin-left: auto;
+  }
 }
 
 .connect__item {
@@ -261,9 +304,6 @@ img {
 
 .connect__mail,
 .connect__tel {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -285,6 +325,179 @@ img {
 .connect__tel:hover,
 .connect__tel:focus,
 .connect__tel:focus {
+  color: var(--accent-color);
+}
+
+.menu-open-btn {
+  margin-left: auto;
+  background-color: transparent;
+}
+@media screen and (min-width: 768px) {
+  .menu-open-btn {
+    display: none;
+  }
+}
+
+.mob-menu.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.mob-menu {
+  position: fixed;
+  top: 0;
+  background-color: white;
+  width: 100vw;
+  height: 100vh;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  z-index: 1;
+}
+.mob-menu > .menu-container {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  overflow: auto;
+}
+
+.is-open {
+  -webkit-transform: translateX(0);
+      -ms-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.menu-container {
+  height: 100%;
+  padding: 10px 15px 48px 40px;
+  margin: 0 auto;
+}
+
+.menu-close-btn {
+  display: block;
+  margin-left: auto;
+  background-color: transparent;
+  border: none;
+  -webkit-transition: color 250ms var(--timing-function);
+  -o-transition: color 250ms var(--timing-function);
+  transition: color 250ms var(--timing-function);
+}
+.menu-close-btn:hover, .menu-close-btn:focus {
+  color: var(--accent-color);
+}
+
+.menu-close-btn__icon {
+  fill: currentColor;
+}
+
+.mob-menu__list {
+  margin-bottom: 302px;
+}
+@media screen and (min-width: 768px) {
+  .mob-menu__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    display: none;
+    gap: 50px;
+    margin-left: 93px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .mob-menu__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    display: none;
+    gap: 50px;
+    margin-left: 93px;
+  }
+}
+
+.mob-menu__item:not(:last-child) {
+  margin-bottom: 35px;
+}
+
+.mob-menu__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.175;
+  letter-spacing: 0.02em;
+  color: var(--title-text-color);
+  -webkit-transition: color 250ms var(--timing-function);
+  -o-transition: color 250ms var(--timing-function);
+  transition: color 250ms var(--timing-function);
+}
+.mob-menu__link:hover, .mob-menu__link:hover, .mob-menu__link:focus, .mob-menu__link:focus {
+  color: var(--accent-color);
+}
+
+.mob-connect {
+  margin-bottom: 64px;
+}
+
+.mob-connect__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob-connect__tel {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.1764705882;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+}
+
+.mob-connect__mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+  -webkit-transition: color 250ms var(--timing-function);
+  -o-transition: color 250ms var(--timing-function);
+  transition: color 250ms var(--timing-function);
+}
+.mob-connect__mail:hover, .mob-connect__mail:hover, .mob-connect__mail:focus, .mob-connect__mail:focus {
+  color: var(--accent-color);
+}
+
+.mob-soc-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.mob-soc-menu__item {
+  display: block;
+  font-size: 20px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+  padding-right: 10px;
+}
+
+.mob-soc-menu__item:last-child {
+  border-right: none;
+}
+
+.mob-soc-menu__link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.2222222222;
+  letter-spacing: 0.02em;
   color: var(--accent-color);
 }
 
@@ -757,23 +970,91 @@ img {
   padding-bottom: 60px;
   background-color: var(--background-color-footer);
 }
+@media screen and (min-width: 768px) {
+  .footer {
+    padding-top: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer {
+    padding-bottom: 0;
+  }
+}
 
 .footer-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+  display: block;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .footer-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    text-align: left;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer-tabl {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-line-pack: justify;
+        align-content: space-between;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
 }
 
 .footer-info {
+  width: 100%;
   display: block;
+}
+@media screen and (min-width: 768px) {
+  .footer-info {
+    margin-right: 165px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-info {
+    margin-right: 70px;
+  }
 }
 
 .footer-address {
   font-style: normal;
   margin-top: 20px;
+}
+
+.footer-list__item {
+  margin-bottom: 60px;
 }
 
 .footer-list__item:not(:last-child) {
@@ -816,10 +1097,23 @@ img {
 
 .footer-soc {
   display: block;
-  margin-left: 70px;
+}
+@media screen and (min-width: 768px) {
+  .footer-soc {
+    margin-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-soc {
+    margin-right: auto;
+  }
 }
 
 .footer-soc-title {
+  display: inline-block;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
@@ -828,12 +1122,24 @@ img {
   margin-bottom: 20px;
   color: var(--white-primary-color);
 }
+@media screen and (min-width: 768px) {
+  .footer-soc-title {
+    margin-top: 60px;
+  }
+}
 
 .footer-soc-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   gap: 10px;
+  margin-bottom: 60px;
 }
 
 .footer-soc-link {
@@ -862,11 +1168,8 @@ img {
   fill: var(--white-primary-color);
 }
 
-.footer-form {
-  margin-left: auto;
-}
-
 .footer-form__text {
+  display: block;
   margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
@@ -875,12 +1178,49 @@ img {
   text-transform: uppercase;
   color: #ffffff;
 }
+@media screen and (min-width: 1200px) {
+  .footer-form__text {
+    margin-bottom: 0;
+  }
+}
 
-.footer-form-main {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 12px;
+@media screen and (min-width: 480px) {
+  .footer-form-main {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 12px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer-form-main {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 12px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-form-main {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+  }
 }
 
 .footer-form__label {
@@ -896,7 +1236,7 @@ img {
 .footer-form__input {
   margin: 0;
   padding: 16px;
-  width: 358px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -964,6 +1304,16 @@ img {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
+@media screen and (min-width: 768px) {
+  .footer-form__input {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-form__input {
+    width: 358px;
+  }
+}
 
 .footer-form__btn {
   display: -webkit-box;
@@ -975,6 +1325,7 @@ img {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   margin: 0 auto;
+  margin-top: 20px;
   gap: 10px;
   padding: 10px 28px 10px 28px;
   width: 200px;
@@ -1025,12 +1376,22 @@ img {
       -ms-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   padding: 40px;
-  width: 528px;
-  height: 581px;
+  width: 330px;
   background-color: var(--white-primary-color);
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+}
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    min-height: 581px;
+  }
 }
 
 .btn_close {
@@ -1262,8 +1623,8 @@ img {
           justify-content: center;
   margin: 0px;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.7142857143;
+  font-size: 12px;
+  line-height: 2;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
   -webkit-transition: background-color 250ms var(--timing-function), fill 250ms var(--timing-function);
@@ -1297,6 +1658,16 @@ img {
 }
 .input-check:focus + .check-text span {
   border-color: var(--accent-color);
+}
+@media screen and (max-width: 479px) {
+  .check-text {
+    font-size: 8px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .check-text {
+    font-size: 14px;
+  }
 }
 
 .policy-link {
