--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -3,20 +3,59 @@
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: var(--background-color-footer);
+  @include tablet{
+    padding-top: 0;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  @include desktop{
+    padding-bottom: 0;
+  }
 }
 
 .footer-container {
+  display: block;
+    text-align: center;
+    @include tablet{
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+    @include desktop{
+      
+      display: flex;
+      align-items: baseline;
+      text-align: left;
+      justify-content: space-between;
+    }
+}
+
+.footer-tabl{
+@include tablet{
   display: flex;
+  align-content: space-between;
   align-items: baseline;
+}
 }
 
 .footer-info {
+  width: 100%;
   display: block;
+  @include tablet{
+    margin-right: 165px;
+  }
+  @include desktop{
+    margin-right: 70px;
+  }
 }
 
 .footer-address {
   font-style: normal;
   margin-top: 20px;
+}
+.footer-list__item{
+margin-bottom: 60px;
 }
 .footer-list__item:not(:last-child) {
   margin-bottom: 9px;
@@ -57,10 +96,18 @@
 
 .footer-soc {
   display: block;
-  margin-left: 70px;
+  // margin-left: 70px;
+  @include tablet{
+    margin-bottom: 60px;
+  }
+  @include desktop{
+    margin-right: auto;
+  }
 }
 
 .footer-soc-title {
+  display: inline-block;
+  justify-content: center;
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
@@ -68,11 +115,17 @@
   text-transform: uppercase;
   margin-bottom: 20px;
   color: var(--white-primary-color);
+  @include tablet {
+    margin-top: 60px;
+  }
 }
 
 .footer-soc-list {
   display: flex;
+  align-items: center;
+  justify-content: center;
   gap: 10px;
+  margin-bottom: 60px;
 }
 
 .footer-soc-link {
@@ -94,11 +147,9 @@
 }
 
 
-.footer-form {
-  margin-left: auto;
-}
-
 .footer-form__text {
+  display: block;
+  
   margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
@@ -106,11 +157,27 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #ffffff;
+  @include desktop {
+    margin-bottom: 0;
+  }
 }
 
 .footer-form-main {
-  display: flex;
+  @include mobile {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+  }
+  @include tablet {
+    display: flex;
+  flex-direction: column;
   gap: 12px;
+  }
+  @include desktop {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end
+  }
 }
 
 .footer-form__label {
@@ -125,7 +192,7 @@
 .footer-form__input {
   margin: 0;
   padding: 16px;
-  width: 358px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -147,6 +214,12 @@
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
   }
+  @include tablet {
+    width: 450px;
+  }
+  @include desktop{
+    width: 358px;
+  }
 }
 
 
@@ -156,6 +229,7 @@
   justify-content: center;
   box-sizing: border-box;
   margin: 0 auto;
+  margin-top: 20px;
   gap: 10px;
   padding: 10px 28px 10px 28px;
   width: 200px;
