--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,108 +1,255 @@
 .header {
-    width: 100%;
-    padding-top: 24px;
-    padding-bottom: 25px;
-    background-color: #ffffff;
-    border-bottom: 1px solid #ececec;
+  width: 100%;
+  padding-top: 24px;
+  padding-bottom: 25px;
+  background-color: #ffffff;
+  border-bottom: 1px solid #ececec;
+}
+
+.header__container {
+  display: flex;
+  align-items: center;
+}
+
+.navigation {
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  font-family: raleway;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: var(--accent-color);
+}
+
+.site-list {
+  display: flex;
+  display: none;
+  gap: 50px;
+  margin-left: 93px;
+  @include mobile {
+    display: none;
   }
-  
-  .header__container {
-    display: flex;
-    align-items: center;
-  }
-  
-  .navigation {
-    display: flex;
-    align-items: center;
-  }
-  
-  .logo {
-    font-family: raleway;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
-    color: var(--accent-color);
-  }
- 
-  
-  .site-list {
+  @include tablet {
     display: flex;
     gap: 50px;
-    margin-left: 93px; 
   }
-  
-  .site-list .link.current {
+}
+
+.site-list .link.current {
+  color: var(--accent-color);
+  &::after {
+    content: '';
+    position: absolute;
+    display: block;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 4px;
+    background-size: cover;
+    background-color: var(--accent-color);
+    border-radius: 2px;
+    transform: scaleX(1);
+    transition: 250ms var(--timing-function);
+  }
+}
+
+.site-list__item {
+  position: relative;
+  transition-property: var(--accent-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  padding: 32px 0 32px 0;
+  color: var(--title-text-color);
+  transition: color 250ms var(--timing-function);
+  &:hover,
+  &:focus {
     color: var(--accent-color);
-    &::after {
-      content: '';
-      position: absolute;
-      display: block;
-      left: 0;
-      bottom: 0;
-      width: 100%;
-      height: 4px;
-      background-size: cover;
-      background-color: var(--accent-color);
-      border-radius: 2px;
-      transform: scaleX(1);
-      transition: 250ms var(--timing-function);
-    }
   }
-  
-  
-  .site-list__item {
-    position: relative;
-    transition-property: var(--accent-color);
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    padding: 32px 0 32px 0;
-    color: var(--title-text-color);
-    transition: color 250ms var(--timing-function);
-     &:hover,
-     &:focus {
-    color: var(--accent-color);
-  }
-  }
-  
- 
-  
-  .connect {
+}
+
+.connect {
+    display: none;
+  @include tablet {
     display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-left: auto;
+  }
+  @include desktop {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
     gap: 50px;
     margin-left: auto;
   }
-  
-  .connect__item {
+}
+
+.connect__item {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.connect__icon {
+  fill: currentColor;
+  margin-right: 10px;
+}
+
+.connect__mail,
+.connect__tel {
+  // display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+  font-style: normal;
+  transition: color 250ms var(--timing-function);
+  &:hover,
+  &:hover,
+  &:focus,
+  &:focus {
+    color: var(--accent-color);
+  }
+}
+
+.menu-open-btn {
+  margin-left: auto;
+  background-color: transparent;
+  @include tablet {
+    display: none;
+  }
+}
+.mob-menu.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+.mob-menu {
+  position: fixed;
+  top: 0;
+  background-color: white;
+  width: 100vw;
+  height: 100vh;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  z-index: 1;
+  > .menu-container {
+    width: 100%;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: auto;
   }
-  
-  .connect__icon{
-    fill: currentColor;
-    margin-right: 10px;
+}
+.is-open {
+  transform: translateX(0);
+}
+.menu-container {
+  height: 100%;
+  padding: 10px 15px 48px 40px;
+  margin: 0 auto;
+}
+.menu-close-btn {
+  display: block;
+  margin-left: auto;
+  background-color: transparent;
+  border: none;
+  transition: color 250ms var(--timing-function);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
   }
-  
-  .connect__mail,
-  .connect__tel {
+}
+.menu-close-btn__icon {
+  fill: currentColor;
+}
+.mob-menu__list {
+  margin-bottom: 302px;
+  @include tablet {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: var(--primary-text-color);
-    font-style: normal;
-    transition: color 250ms var(--timing-function);
-    &:hover,
-    &:hover,
-    &:focus,
-    &:focus {
-      color: var(--accent-color);
-    }
+    display: none;
+    gap: 50px;
+    margin-left: 93px;
   }
-  
- 
+  @include desktop {
+    display: flex;
+    display: none;
+    gap: 50px;
+    margin-left: 93px;
+  }
+}
+.mob-menu__item:not(:last-child) {
+  margin-bottom: 35px;
+}
+.mob-menu__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: calc(47px / 40px);
+  letter-spacing: 0.02em;
+  color: var(--title-text-color);
+  transition: color 250ms var(--timing-function);
+  &:hover,
+  &:hover,
+  &:focus,
+  &:focus {
+    color: var(--accent-color);
+  }
+}
+.mob-connect {
+  margin-bottom: 64px;
+}
+.mob-connect__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+.mob-connect__tel {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: calc(40px / 34px);
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+}
+.mob-connect__mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+  transition: color 250ms var(--timing-function);
+  &:hover,
+  &:hover,
+  &:focus,
+  &:focus {
+    color: var(--accent-color);
+  }
+}
+.mob-soc-menu {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.mob-soc-menu__item {
+  display: block;
+
+  font-size: 20px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+  padding-right: 10px;
+}
+.mob-soc-menu__item:last-child {
+  border-right: none;
+}
+
+.mob-soc-menu__link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: calc(22px / 18px);
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+}
